Resolve Issue 007 truncated images on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,8 @@ h2 {
 #logo {
     clear: all;
     text-transform: uppercase;
+    font-size: 180%;
+    margin-left: 30px;
 }
 
 #menu,
@@ -77,17 +79,20 @@ h2 {
     /* 20/04/23 DMcC - was 75px, modified to reduce header size on all screens */
 }
 
-
 #logo {
     font-size: 180%;
     margin-left: 30px;
-}
+    display:flex;
+    }
+
+    #logo 
+    {
+        size: 80%;}
 
 #menu {
     font-size: 110%;
     display: flex;
     flex-wrap: wrap;
-    font-size: 110%;
 }
 
 #menu .active {
@@ -104,8 +109,7 @@ a {
     text-decoration: none;
 }
 
-#menu a
-    {
+#menu a {
     text-decoration: none;
     color: inherit;
     font-family: 'Libre Baskerville', serif;
@@ -324,6 +328,12 @@ img {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+.flip-card-front img {
+          width:200px;
+          height:150px; 
+          border-radius:15px;
 }
 
 /* Add flip card functionality: sourced from W3schools ref https://www.w3schools.com/howto/howto_css_flip_card.asp*/
@@ -571,6 +581,35 @@ img {
     }
 }
 
+/* 20/04/23 DMcC Add responsiveness for screen sizes between 320 - 400px, to overcome problems with flipcard display */
+/* whereby flipcards of 200px wide are truncated to RHS of screen */
+@media screen and (max-width: 400px) {
+    /* DMcC 18/04/23 - Reduce font size in header to avoid navbar overspill on mobile screens */
+    #menu,
+    #logo {
+        font-size: 0.7em;
+        letter-spacing: 2px;
+    }
+    
+    .flip-card {
+        width: 160px;
+        height: 120px;
+        }
+
+        .flip-card-front, .flip-card-back, .flip-card-inner {
+            width: 160px;
+            height: 120px;
+        }
+
+
+        .flip-card-front img {
+            width:160px;
+            height:120px; 
+            border-radius:15px;
+  }
+
+}
+ 
 /* Add responsiveness for small screen sizes below 320px width */
 @media screen and (max-width: 320px) {
     #photos {
@@ -593,5 +632,11 @@ img {
     #menu,
     #logo {
         font-size: 0.5em;
+    }
+
+    .main-left,
+    .main-right {
+        align-items: center;
+        /* 20/04/23 DMcC - change from self-end to center as when display in single column the main-left and main-right are misaligned */
     }
 }
